force-app/main/default/objects/Credit_Approval__c/Credit_Approval__c.object-meta.xml
<CustomObject>
    <description>Object used by the Customer Relations Team to summarise credit amounts for product family approvals</description>
    <label>Credit Approval</label>
    <nameField>
        <displayFormat>CA-{0000000000}</displayFormat>
        <label>Credit Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>