force-app/main/default/objects/Credit_Approval__c/fields/ActualApprover1User__c.field-meta.xml
<CustomField>
    <fullName>ActualApprover1User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who provided approval 1 for this credit approval.</description>
    <inlineHelpText>The user who provided approval 1 for this credit approval.</inlineHelpText>
    <label>Actual Approver 1 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver1_CreditApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>