force-app/main/default/objects/Credit_Approval__c/fields/ActualApprover2User__c.field-meta.xml
<CustomField>
    <fullName>ActualApprover2User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who provided approval 2 for this credit approval.</description>
    <inlineHelpText>The user who provided approval 2 for this credit approval.</inlineHelpText>
    <label>Actual Approver 2 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver2_CreditApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>