force-app/main/default/objects/Credit_Approval__c/fields/ActualApprover3User__c.field-meta.xml
<CustomField>
    <fullName>ActualApprover3User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who provided approval 3 for this credit approval.</description>
    <inlineHelpText>The user who provided approval 3 for this credit approval.</inlineHelpText>
    <label>Actual Approver 3 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver3_CreditApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>