force-app/main/default/objects/Credit_Approval__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjustment</label>
    <referenceTo>Adjustment__c</referenceTo>
    <relationshipLabel>Credit Approvals</relationshipLabel>
    <relationshipName>Credit_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>