force-app/main/default/objects/Credit_Approval__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>DEPRECATED. DO NOT USE.</description>
    <label>Approval Level (DEPRECATED)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GM of Product</fullName>
            </value>
            <value>
                <fullName>National Dispute Manager</fullName>
            </value>
            <value>
                <fullName>Head Of Product</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by Level 1</fullName>
                <isActive>false</isActive>
                <label>Approved by Level 1</label>
            </value>
            <value>
                <fullName>Approved by Level 2</fullName>
                <isActive>false</isActive>
                <label>Approved by Level 2</label>
            </value>
            <value>
                <fullName>Approved by Level 3</fullName>
                <isActive>false</isActive>
                <label>Approved by Level 3</label>
            </value>
            <value>
                <fullName>Approved by Level 4</fullName>
                <isActive>false</isActive>
                <label>Approved by Level 4</label>
            </value>
            <value>
                <fullName>Approved by Level 5</fullName>
                <isActive>false</isActive>
                <label>Approved by Level 5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>