force-app/main/default/objects/Credit_Approval__c/fields/Approver1Complete__c.field-meta.xml
<CustomField>
    <fullName>Approver1Complete__c</fullName>
    <description>Indicates Approver 1 has completed the approval by either approving or rejecting the request.</description>
    <inlineHelpText>Indicates Approver 1 has completed the approval by either approving or rejecting the request.</inlineHelpText>
    <label>Approver 1 Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>