force-app/main/default/objects/Credit_Approval__c/fields/Approver1Role__c.field-meta.xml
<CustomField>
    <fullName>Approver1Role__c</fullName>
    <description>Role of the first approver for this credit approval record. E.g. Customer Resolutions Manager</description>
    <inlineHelpText>Role of the first approver for this credit approval record. E.g. Customer Resolutions Manager</inlineHelpText>
    <label>Approver 1 Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditApprovalRoles</valueSetName>
    </valueSet>
</CustomField>