force-app/main/default/objects/Credit_Approval__c/fields/Approver2Role__c.field-meta.xml
<CustomField>
    <fullName>Approver2Role__c</fullName>
    <description>Role of the second approver for this credit approval record. E.g. Customer Resolutions Manager</description>
    <inlineHelpText>Role of the second approver for this credit approval record.</inlineHelpText>
    <label>Approver 2 Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CreditApprovalRoles</valueSetName>
    </valueSet>
</CustomField>