force-app/main/default/objects/Credit_Approval__c/fields/Approver_1__c.field-meta.xml
<CustomField>
    <fullName>Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delegated Approver within the delegation workflow. Referenced by the standard approval process</description>
    <label>Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>