force-app/main/default/objects/Credit_Approval__c/fields/Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delegated Approver within the delegation workflow. Referenced by the standard approval process</description>
    <label>Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Approvals2</relationshipName>
    <type>Lookup</type>
</CustomField>