force-app/main/default/objects/Credit_Approval__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing Account for which the credit claim has been requested</description>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Credit Approvals</relationshipLabel>
    <relationshipName>Credit_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>