force-app/main/default/objects/Credit_Approval__c/fields/BillingAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountNumber__c</fullName>
    <description>Billing Account Number related to the case</description>
    <label>Billing Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>