force-app/main/default/objects/Credit_Approval__c/fields/Case_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Email__c</fullName>
    <label>Case Owner Email</label>
    <type>Email</type>
</CustomField>