force-app/main/default/objects/Credit_Approval__c/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. DO NOT USE. Used the in the Approval Process. Set by the approval matrix rules</description>
    <label>CEO (DEPRECATED)</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CEO</relationshipLabel>
    <relationshipName>CEO</relationshipName>
    <type>Lookup</type>
</CustomField>