force-app/main/default/objects/Credit_Approval__c/fields/CreditApprovalMatrix__c.field-meta.xml
<CustomField>
    <fullName>CreditApprovalMatrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Credit approval matrix record holding the approver configuration applicable to this Credit Approval.</description>
    <inlineHelpText>Credit approval matrix record holding the approver configuration applicable to this Credit Approval.</inlineHelpText>
    <label>Credit Approval Matrix</label>
    <referenceTo>CreditApprovalMatrix__c</referenceTo>
    <relationshipLabel>Credit Approvals</relationshipLabel>
    <relationshipName>CreditApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>