force-app/main/default/objects/Credit_Approval__c/fields/DateApproved__c.field-meta.xml
<CustomField>
    <fullName>DateApproved__c</fullName>
    <description>DEPRECATED. DO NOT USE.</description>
    <label>Date  Approved  (DEPRECATED)</label>
    <type>DateTime</type>
</CustomField>