force-app/main/default/objects/Credit_Approval__c/fields/DivisionalCFO__c.field-meta.xml
<CustomField>
    <fullName>DivisionalCFO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. DO NOT USE. Divisional CFO name</description>
    <label>Divisional CFO (DEPRECATED)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Approvals2FtZ</relationshipName>
    <type>Lookup</type>
</CustomField>