force-app/main/default/objects/Credit_Approval__c/fields/GSTAmount__c.field-meta.xml
<CustomField>
    <fullName>GSTAmount__c</fullName>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>