force-app/main/default/objects/Credit_Approval__c/fields/Is_Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Queue__c</fullName>
    <formula>ISBLANK(Case__r.Owner:User.Id)</formula>
    <label>Is Owner Queue</label>
    <type>Checkbox</type>
</CustomField>