force-app/main/default/objects/Credit_Approval__c/fields/Number_Of_Days_For_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_For_Escalation__c</fullName>
    <description>DEPRECATED. DO NOT USE.</description>
    <label>Number Of Days For Escalation(DEPRECATED</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>