force-app/main/default/objects/Credit_Approval__c/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <label>Product Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AP Fulfilment</fullName>
            </value>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Local marketplaces</fullName>
            </value>
            <value>
                <fullName>Tmall subscriptions</fullName>
            </value>
            <value>
                <fullName>International Products</fullName>
            </value>
            <value>
                <fullName>International Postal</fullName>
            </value>
            <value>
                <fullName>eCommerce scorecard</fullName>
            </value>
            <value>
                <fullName>Parcel Post Commercial &amp; Customer</fullName>
            </value>
            <value>
                <fullName>Premium, Next Flight, Courier</fullName>
            </value>
            <value>
                <fullName>ST Express Product (ST)</fullName>
            </value>
            <value>
                <fullName>3PL</fullName>
            </value>
            <value>
                <fullName>Decipha Product and Solutions</fullName>
            </value>
            <value>
                <fullName>Payment Processing / SecurePay</fullName>
            </value>
            <value>
                <fullName>Manage My Finances / PostBillPay</fullName>
            </value>
            <value>
                <fullName>Banking Services (Bank@Post)</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Retail Financial Products - Cards</fullName>
            </value>
            <value>
                <fullName>Retail Financial Products - Insurance</fullName>
            </value>
            <value>
                <fullName>Retail Financial Products - Cash Services (Money Orders/FX)</fullName>
            </value>
            <value>
                <fullName>Retail Financial Products - Store-in-Store</fullName>
            </value>
            <value>
                <fullName>Financial Services - Alpha</fullName>
            </value>
            <value>
                <fullName>Data &amp; Insights</fullName>
            </value>
            <value>
                <fullName>Government and Agency Services (Federal Services/Marketplaces)</fullName>
            </value>
            <value>
                <fullName>Emerging Identity Services</fullName>
            </value>
            <value>
                <fullName>Consumer Identity Services (Police Checks)</fullName>
            </value>
            <value>
                <fullName>Identity Services - Fraud Management</fullName>
            </value>
            <value>
                <fullName>Government &amp; State Services</fullName>
            </value>
            <value>
                <fullName>Trusted Solutions Centre - Emerging Products</fullName>
            </value>
            <value>
                <fullName>Trusted Solutions Centre - Manage my Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>