force-app/main/default/objects/Credit_Approval__c/fields/Ready_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to all test all conditions are met before submitting for approval</description>
    <inlineHelpText>Field used to all test all conditions are met before submitting for approval</inlineHelpText>
    <label>Ready For Approval</label>
    <type>Checkbox</type>
</CustomField>