force-app/main/default/objects/Credit_Approval__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <label>Sales Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>