force-app/main/default/objects/Credit_Approval__c/validationRules/Invalid_Status_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Status_Selection</fullName>
    <active>true</active>
    <description>Invalid Status can only be selected if the credit amount is greater than zero.</description>
    <errorConditionFormula>AND(CreditAmountExclusiveGST__c &gt; 0, ISPICKVAL(Status__c, &apos;Invalid&apos;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be made Invalid if the Credit Amount Exclusive GST is greater than zero.</errorMessage>
</ValidationRule>