force-app/main/default/objects/Credit_Approval__c/validationRules/InvoiceToCash_ReadyforApproval_NewDI.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceToCash_ReadyforApproval_NewDI</fullName>
    <active>true</active>
    <description>Restrict update of Credit Approval if there is at least 1 child DI with status of new</description>
    <errorConditionFormula>AND( Ready_For_Approval__c == true ,Number_Of_Items_Pending__c &gt;0)</errorConditionFormula>
    <errorDisplayField>Ready_For_Approval__c</errorDisplayField>
    <errorMessage>Please update all disputed item statuses before submitting for approval</errorMessage>
</ValidationRule>