force-app/main/default/objects/Credit_Approval__c/validationRules/InvoiceToCash_Restrict_ReadyforApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceToCash_Restrict_ReadyforApproval</fullName>
    <active>true</active>
    <description>Restrict update of ready for approval only to case owner</description>
    <errorConditionFormula>AND( ISCHANGED( Ready_For_Approval__c ) ,  Case__r.OwnerId != $User.Id )</errorConditionFormula>
    <errorDisplayField>Ready_For_Approval__c</errorDisplayField>
    <errorMessage>You must be the Case Owner to submit this for approval.</errorMessage>
</ValidationRule>