force-app/main/default/objects/Credit_Approval__c/validationRules/Lock_Credit_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Credit_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Case__r.Status,&apos;Closed&apos;), ISCHANGED(Adjustment__c)==false)</errorConditionFormula>
    <errorMessage>Credit approval with case closed cannot be updated.</errorMessage>
</ValidationRule>