force-app/main/default/objects/Credit_Approval__c/validationRules/No_Signatures_Attached_when_closing_case.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Signatures_Attached_when_closing_case</fullName>
    <active>true</active>
    <description>Pending Approval Signatures ApprovalsAttached__c</description>
    <errorConditionFormula>AND (ISPICKVAL(Status__c ,&apos;Approved&apos;),
	      ApprovalsAttached__c != true ,
ISCHANGED(Status__c)==true,CreditAmountInclusiveGST__c &gt;1000)</errorConditionFormula>
    <errorMessage>You must confirm you have attached the approval signature before approving the Credit Approval.</errorMessage>
</ValidationRule>