force-app/main/default/objects/Credit_Approval__c/validationRules/Rejection_Final.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Final</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT(ISPICKVAL(Status__c,&apos;Rejected&apos;)) ,
				RejectionFinal__c = TRUE
				)</errorConditionFormula>
    <errorDisplayField>RejectionFinal__c</errorDisplayField>
    <errorMessage>You can not mark as rejection final when approval has not been rejected.</errorMessage>
</ValidationRule>