force-app/main/default/objects/Credit_Approval__c/validationRules/RNumber_required_for_Peoplesoft.validationRule-meta.xml
<ValidationRule>
    <fullName>RNumber_required_for_Peoplesoft</fullName>
    <active>true</active>
    <errorConditionFormula>AND (Ready_For_Approval__c = TRUE,

ISPICKVAL( Case__r.Related_Billing_Account__r.Source_System__c ,&apos;PeopleSoft&apos;),
					ISBLANK( Case__r.AdjustmentNoteNumber__c))</errorConditionFormula>
    <errorMessage>You must supply an R number on the case before submitting for approval.</errorMessage>
</ValidationRule>