force-app/main/default/objects/Credit_Approval__c/listViews/Australia_Post_LPC_Queue_Credit_Approval.listView-meta.xml
<ListView>
    <fullName>Australia_Post_LPC_Queue_Credit_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Australia Post LPC Queue</label>
    <queue>Australia_Post_LPC_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>