force-app/main/default/objects/Credit_Approval__c/listViews/CRManager_Approvals_Greater_Than_1000.listView-meta.xml
<ListView>
    <fullName>CRManager_Approvals_Greater_Than_1000</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>CreditAmountExclusiveGST__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Product_Family__c</columns>
    <columns>BillingAccountNumber__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Status__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Current_Approver__c</columns>
    <columns>Date_Submitted_to_Current_Approver__c</columns>
    <columns>Case_Summary__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Approval_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval Decision</value>
    </filters>
    <filters>
        <field>Ready_For_Approval__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CreditAmountExclusiveGST__c</field>
        <operation>greaterThan</operation>
        <value>1000</value>
    </filters>
    <label>CRManager Approvals Greater Than $1000</label>
    <language>en_US</language>
</ListView>