force-app/main/default/objects/Credit_Approval__c/listViews/Customer_Resolutions_Manager_Credit_Approval.listView-meta.xml
<ListView>
    <fullName>Customer_Resolutions_Manager_Credit_Approval</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Resolutions Manager</label>
    <queue>Customer_Resolutions_Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>