force-app/main/default/objects/Credit_Approval__c/listViews/My_Credit_Approvals.listView-meta.xml
<ListView>
    <fullName>My_Credit_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Status__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>BillingAccountNumber__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Credit Approvals</label>
    <language>en_US</language>
</ListView>