force-app/main/default/objects/Credit_Approval__c/listViews/My_Pending_Credit_Approvals.listView-meta.xml
<ListView>
    <fullName>My_Pending_Credit_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Submitted_to_Current_Approver__c</columns>
    <columns>Case__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>Product_Family__c</columns>
    <columns>Product_Sub_Category__c</columns>
    <columns>CreditAmountExclusiveGST__c</columns>
    <columns>Case_Summary__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Submitted_for_Approval_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LoggedinUserisCurrentApprover__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Ready_For_Approval__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Approved</value>
    </filters>
    <label>My Pending Credit Approvals</label>
    <language>en_US</language>
</ListView>